NetBSD Problem Report #47878

From msaitoh@execsw.org  Sun Jun  2 17:08:14 2013
Return-Path: <msaitoh@execsw.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1 with cipher DHE-RSA-AES256-SHA (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id D0143706AC
	for <gnats-bugs@gnats.NetBSD.org>; Sun,  2 Jun 2013 17:08:14 +0000 (UTC)
Message-Id: <20130602170811.AD0C443985D@vslock.execsw.org>
Date: Mon,  3 Jun 2013 02:08:11 +0900 (JST)
From: msaitoh@execsw.org
Reply-To: msaitoh@execsw.org
To: gnats-bugs@gnats.NetBSD.org
Subject: wm(4) "No EEPROM" prblem. The driver may misunderstand NVM bank on PCH2 or newer chips
X-Send-Pr-Version: 3.95

>Number:         47878
>Category:       kern
>Synopsis:       wm(4) "No EEPROM" problem. The driver may misunderstand NVM bank on PCH2 or newer chips
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    msaitoh
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Jun 02 17:10:00 +0000 2013
>Closed-Date:    Mon Sep 09 03:49:52 +0000 2013
>Last-Modified:  Mon Sep 09 03:49:52 +0000 2013
>Originator:     SAITOH Masanobu
>Release:        6.x
>Organization:
>Environment:
	6.x and -current
Architecture: i386
Machine: i386
>Description:
	if_wm.c::wm_valid_nvm_bank_detect_ich8lan() has a bug that
	it may misunderstand the NVM's bank number on PCH or newer chips.
	When the bank is misunderstood, wm_attach() prints "No EEPROM" and
	failed to attach. It's depend on the board whether the problem occurs
	or not.
>How-To-Repeat:
	Boot netbsd-6 or -current on PCH2 or newer chips.
>Fix:
	I'll fix the problem.

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->msaitoh
Responsible-Changed-By: msaitoh@NetBSD.org
Responsible-Changed-When: Sun, 02 Jun 2013 17:12:03 +0000
Responsible-Changed-Why:
mine.


From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47878 CVS commit: src/sys/dev/pci
Date: Sun, 2 Jun 2013 17:23:33 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Sun Jun  2 17:23:33 UTC 2013

 Modified Files:
 	src/sys/dev/pci: if_wm.c

 Log Message:
 - Fix a bug that wm_attach() may fail on some PCH or newer system.
   wm_valid_nvm_bank_detect_ich8lan() misunderstood the NVM's bank number.
   Fixes PR#47878
 - Remove a quick hack for NVM checksum that I added in last commit (rev. 1.249)


 To generate a diff of this commit:
 cvs rdiff -u -r1.249 -r1.250 src/sys/dev/pci/if_wm.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: msaitoh@NetBSD.org
State-Changed-When: Tue, 25 Jun 2013 04:14:18 +0000
State-Changed-Why:
Pullup requests were sent to both pullup-5@ and pullup-6@


From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47878 CVS commit: [netbsd-6] src/sys/dev/pci
Date: Sun, 14 Jul 2013 20:39:13 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Sun Jul 14 20:39:13 UTC 2013

 Modified Files:
 	src/sys/dev/pci [netbsd-6]: if_wm.c if_wmreg.h if_wmvar.h

 Log Message:
 Apply changes (requested by msaitoh in ticket #907):

 sys/dev/pci/if_wm.c				1.238, 1.244-1.247, 1.249-1.258
 sys/dev/pci/if_wmreg.h				1.50-1.51, 1.53
 sys/dev/pci/if_wmvar.h				1.15-1.16

 	Various fixes to wm(4):
 	Add I21[0178] support.
 	Fix a bug that wm_attach() may fail on some PCH2 or newer system.
 	wm_valid_nvm_bank_detect_ich8lan() misunderstood the NVM's bank
 	number. Fixes PR#47878.
 	Fix a bug that the check of reset complete fails on Intel 8 series
 	with "wm_lan_init_done: lan_init_done failed to complete" message.
 	The broken code was used for ICH8, 9... and PCH2.
 	The wm_linkintr_gmii() function is called from interrupt. That's
 	not tick, so call mii_pollstat() instead of mii_tick().
 	Add ECC support for the packet buffer. Only 82571 and I21[78] support
 	ECC.
 	Fix a bug that wrong semaphore is used in wm_gmii_hv_{read,write}reg.
 	Change style, add comments, fix some comments, use macros and
 	remove trailing whitespaces.
 	[msaitoh, ticket #907]


 To generate a diff of this commit:
 cvs rdiff -u -r1.227.2.8 -r1.227.2.9 src/sys/dev/pci/if_wm.c
 cvs rdiff -u -r1.46.2.3 -r1.46.2.4 src/sys/dev/pci/if_wmreg.h
 cvs rdiff -u -r1.12.10.2 -r1.12.10.3 src/sys/dev/pci/if_wmvar.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47878 CVS commit: [netbsd-5] src/sys/dev/pci
Date: Sat, 7 Sep 2013 17:10:18 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Sat Sep  7 17:10:18 UTC 2013

 Modified Files:
 	src/sys/dev/pci [netbsd-5]: if_wm.c if_wmreg.h if_wmvar.h pcidevs

 Log Message:
 sys/dev/pci/if_wm.c				1.246-1.247, 1.249-1.258
 sys/dev/pci/if_wmreg.h				1.51, 1.53
 sys/dev/pci/if_wmvar.h				1.15-1.16
 sys/dev/pci/pcidevs				1.1152-1.1153
 sys/dev/pci/pcidevs.h				regen
 sys/dev/pci/pcidevs_data.h			regen

 	Add I21[0178] support.
 	Fix a bug that wm_attach() may fail on some PCH2 or newer system.
 	wm_valid_nvm_bank_detect_ich8lan() misunderstood the NVM's bank
 	number. Fixes PR#47878.
 	Fix a bug that the check of reset complete fails on Intel 8 series
 	with "wm_lan_init_done: lan_init_done failed to complete" message.
 	The broken code was used for ICH8, 9... and PCH2.
 	The wm_linkintr_gmii() function is called from interrupt. That's
 	not tick, so call mii_pollstat() instead of mii_tick().
 	Add ECC support for the packet buffer. Only 82571 and I21[78] support
 	ECC.
 	Fix a bug that wrong semaphore is used in wm_gmii_hv_{read,write}reg.
 	Add comments, fix some comments, use macros and remove trailing
 	whitespaces.
 	[msaitoh, ticket #1867]


 To generate a diff of this commit:
 cvs rdiff -u -r1.162.4.18 -r1.162.4.19 src/sys/dev/pci/if_wm.c
 cvs rdiff -u -r1.24.20.7 -r1.24.20.8 src/sys/dev/pci/if_wmreg.h
 cvs rdiff -u -r1.2.46.5 -r1.2.46.6 src/sys/dev/pci/if_wmvar.h
 cvs rdiff -u -r1.962.4.18 -r1.962.4.19 src/sys/dev/pci/pcidevs

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: msaitoh@NetBSD.org
State-Changed-When: Mon, 09 Sep 2013 03:49:52 +0000
State-Changed-Why:
pulled up both netbsd-6 and netbsd-5.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.