- Fix a bug that wm_attach() may fail on some PCH2 or newer system.   wm_valid_nvm_bank_detect_ich8lan() misunderstood the NVM's bank number.   Fixes PR#47878 - Remove a quick hack for NVM checksum that I added in last commit (rev. 1.249)